--- a/Contato direto.html
+++ b/Contato direto.html
@@ -306,7 +306,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-5"><strong>Caro cliente</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Cliente, para comprar nesse site você não precisa compartilhar seus dados com o dono da página. Para sua segurança, basta digitar o nome do produto e  a quantidade e preencher os dados de contato para que nosso time possa entrar em contato sobre a compra e seguir o processo de compra online. Nunca entregue dinheiro ou passe dados de seu cartão de crédito. Em caso de divergência de preços no site, o valor válido é o que consta no anuncio de compras.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Caro cliente, para comprar nesse site você não precisa compartilhar seus dados com o dono da página. Para sua segurança, basta digitar o nome do produto e  a quantidade e preencher os dados de contato para que nosso time possa entrar em contato sobre a compra e seguir o processo de compra online. Nunca entregue dinheiro ou passe dados de seu cartão de crédito. Em caso de divergência de preços no site, o valor válido é o que consta no anuncio de compras.</p>
                         
                     </div>
                 </div>
